# thunderbird

./: .dockerignore  .gitignore  CMakeLists.txt  ENVIRONMENTS.md  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  firmware-ci.yml  promote.yml  release.yml  security.yml
debian/: changelog  control  copyright  libthunderbird-sdk-dev.install  libthunderbird-sdk0.install  libthunderbird-sdk0.lintian-overrides  rules
docker/: Dockerfile.dev  Dockerfile.runtime
docs/: CLOCK_SYNC_DESIGN.md  DEVICE_HEALTH_MONITOR_DESIGN.md  DOCUMENTATION_ARCHITECTURE.md  LIDAR_FRAME_ASSEMBLER_DESIGN.md  PERCEPTION_LAYER_DESIGN.md  PHASE2_TRANSPORT_DESIGN.md  VENDOR_PARSER_DESIGN.md  building.md  ci-cd.md  packaging.md  time-synchronization.md
docs/api/: Doxyfile  mainpage.dox  overview.md
docs/contributing/: code-snippet-style.md
docs/getting-started/: building-from-source.md  hardware-setup.md  quick-start.md
docs/guides/: advanced-configuration.md  calibration.md  callback-threading.md  diagnostics.md  perception-pipeline.md  recording-playback.md  time-synchronization.md
docs/release/: v0.2.0.md  (+1 more)
eval/: BASELINE_RESULTS.md  CMakeLists.txt  ROBUSTNESS_REPORT.md  SENSITIVITY_REPORT.md
eval/include/eval/: dataset_adapter.h  evaluator.h  fault_injector.h  frame_stream.h  imu_interpolator.h  metrics.h  perf_timer.h  pose_recorder.h  resource_monitor.h  stress_test_adapter.h  trajectory_alignment.h  trajectory_io.h
eval/scripts/: analyse_robustness.py  analyse_sensitivity.py  plot_eval.py  robustness_sweep.ps1  run_baseline_eval.sh  sensitivity_sweep.ps1
eval/src/: adapter_factory.cpp  evaluator.cpp  fault_injector.cpp  frame_stream.cpp  imu_interpolator.cpp  main.cpp  perf_timer.cpp  pose_recorder.cpp  resource_monitor.cpp  trajectory_alignment.cpp  trajectory_io.cpp
eval/src/adapters/: euroc_adapter.cpp  kitti_adapter.cpp  stress_test_adapter.cpp
eval/tests/: test_trajectory_alignment.cpp
eval_output/: metrics.csv
examples/: CMakeLists.txt  basic_streaming.cpp  callback_api_demo.cpp  clock_service_demo.cpp  comm_layer_demo.cpp  device_firmware_demo.cpp  firmware_loopback_demo.cpp  frame_assembler_demo.cpp  health_monitor_demo.cpp  import_kalibr_demo.cpp  pull_api_demo.cpp  python_example.py  raw_sensors.cpp  recorder_demo.cpp  sync_demo.cpp  sync_layer_demo.cpp  third_party_lidar_demo.cpp
firmware/: CMakeLists.txt
firmware/include/fw/: control.h  mux.h  platform_clock.h  protocol.h  sensor_hal.h  transport.h
firmware/src/: control.c  main.c  mux.c  platform_clock.c  protocol.c  stub_camera.c  stub_imu.c  stub_lidar.c  transport_tcp.c
firmware/tests/: test_control.c  test_protocol.c  test_sensors.c
packaging/: build_deb.sh
python/: CMakeLists.txt  example.py
python/src/: bindings.cpp
python/tools/: tbrec_to_pcd.py  tbrec_to_rosbag.py
ros2_bridge/: CMakeLists.txt  package.xml
ros2_bridge/include/thunderbird/ros2/: ros2_bridge.h
ros2_bridge/src/: ros2_bridge.cpp  ros2_bridge_pull_demo.cpp  thunderbird_ros2_node.cpp
scripts/: extract-version.sh  generate-release-notes.sh  update-changelog.sh
sdk/: CMakeLists.txt  ThunderbirdSDKConfig.cmake.in  thunderbird-sdk.pc.in
sdk/include/thunderbird/: abi.h  calibration.h  clock_service.h  connection.h  connection_manager.h  data_layer.h  device_health_monitor.h  device_manager.h  diagnostics.h  ethernet_transport.h  export.h  lidar_frame_assembler.h  log_macros.h  logging.h  packet_decoder.h  packet_parser.h  player.h  protocol.h  recorder.h  recording_format.h  ring_buffer.h  ros2_helpers.h  sensor_data.h  sensor_driver.h  sensor_queue.h  sequence_tracker.h  simulated_transport.h  sync_engine.h  thunderbird.h  time_sync.h  transport.h  types.h  usb_transport.h  version.h.in
sdk/include/thunderbird/decoders/: decoder_factory.h  velodyne_vlp16.h
sdk/include/thunderbird/drivers/: hardware_driver.h  simulated_camera.h  simulated_imu.h  simulated_lidar.h
sdk/include/thunderbird/odom/: runtime_profiler.h  slam_engine.h  slam_health.h  slam_profiler.h  slam_time_sync.h  slam_types.h
sdk/include/thunderbird/perception/: multi_object_tracker.h  object_detector.h  perception_config.h  perception_engine.h  perception_types.h  preprocessor.h
sdk/python/: CMakeLists.txt  spatial_sdk_bindings.cpp
sdk/python/spatial_sdk/: __init__.py
sdk/src/: calibration.cpp  device_health_monitor.cpp  device_manager.cpp  diagnostics.cpp  logging.cpp  player.cpp  recorder.cpp
sdk/src/calib/: bspline.cpp  bspline.h  kalibr_import.cpp  kalibr_import.h  lidar_camera_calib.cpp  lidar_camera_calib.h  lidar_imu_calib.cpp  lidar_imu_calib.h  line_fitting.h  online_refiner.cpp  online_refiner.h  rigid_transform.cpp  rigid_transform.h
sdk/src/odom/: runtime_profiler.cpp  slam_engine.cpp  slam_health.cpp  slam_profiler.cpp
sdk/src/perception/: cpu_cluster_detector.cpp  gpu_detector_decl.h  gpu_pillar_detector.cpp  hungarian.h  kalman_filter_cv.h  multi_object_tracker.cpp  perception_engine.cpp  preprocessor.cpp
slamd/: CMakeLists.txt
slamd/config/: calibration.yaml  car.yaml  config.yaml  drone.yaml
slamd/include/: acme_slamd.h  calibration_file_parser.h
slamd/src/: acme_slamd.cpp  main.cpp
slamd/systemd/: acme-slamd.service
tests/: CMakeLists.txt  test_bspline.cpp  test_calibration_types.cpp  test_clock_service_seed.cpp  test_data_layer.cpp  test_device_health_monitor.cpp  test_device_manager.cpp  test_diagnostics.cpp  test_imu_interpolation.cpp  test_kalibr_import.cpp  test_kalman_hungarian.cpp  test_logging.cpp  test_multi_object_tracker.cpp  test_object_detector.cpp  test_online_refiner.cpp  test_perception_engine.cpp  test_phase2_hw_integration.cpp  test_preprocessor.cpp  test_protocol_parser.cpp  test_python_bindings.py  test_recorder.cpp  test_rigid_transform.cpp  test_ring_buffer.cpp  test_ros2_bridge.cpp  test_ros2_bridge_calibration.cpp  test_runtime_profiler.cpp  test_slam_benchmark.cpp  test_slam_calibration.cpp  test_slam_health.cpp  test_slamd_load_config.cpp  test_sync_engine.cpp  test_tbrec_converters.py  test_time_sync.cpp
(+2 files in other folders)
