<?xml version="1.0"?>
<package format="3">
  <name>thunderbird_ros2_bridge</name>
  <version>0.2.0</version>
  <description>
    ROS2 bridge for the Thunderbird multi-sensor SDK (Step 4).
    Publishes raw LiDAR/IMU/Camera data and synchronized SyncedFrame
    bundles to standard ROS2 topics using the SDK's Callback and Pull APIs.
  </description>
  <maintainer email="dev@thunderbird.dev">Thunderbird Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
